Fix spacing for authors block within posts

--- a/src/components/article/article.scss
+++ b/src/components/article/article.scss
@@ -29,6 +29,10 @@
 
   #{$component}__authors {
     margin-top: 1.5rem;
+
+    > *:last-child {
+      margin-bottom: 0;
+    }
   }
 
   #{$component}__category {
